@@ -1283,6 +1283,9 @@ void R_Serialize(SEXP s, R_outpstream_t stream)
  * Unserialize Code
  */
 
+int R_ReadItemDepth = 0;
+int R_InitReadItemDepth;
+
 #define INITIAL_REFREAD_TABLE_SIZE 128
 
 static SEXP MakeReadRefTable(void)
@@ -1331,8 +1334,10 @@ static SEXP InStringVec(R_inpstream_t stream, SEXP ref_table)
 	error(_("names in persistent strings are not supported yet"));
     len = InInteger(stream);
     PROTECT(s = allocVector(STRSXP, len));
+    R_ReadItemDepth++;
     for (i = 0; i < len; i++)
 	SET_STRING_ELT(s, i, ReadItem(ref_table, stream));
+    R_ReadItemDepth--;
     UNPROTECT(1);
     return s;
 }
@@ -1502,7 +1507,9 @@ static SEXP ReadItem (SEXP ref_table, R_inpstream_t stream)
 	AddReadRef(ref_table, s);
 	return s;
     case SYMSXP:
+        R_ReadItemDepth++;
 	PROTECT(s = ReadItem(ref_table, stream)); /* print name */
+	R_ReadItemDepth--;
 	s = install(CHAR(s));
 	AddReadRef(ref_table, s);
 	UNPROTECT(1);
@@ -1529,10 +1536,12 @@ static SEXP ReadItem (SEXP ref_table, R_inpstream_t stream)
 	    AddReadRef(ref_table, s);
 
 	    /* Now fill it in  */
+	    R_ReadItemDepth++;
 	    SET_ENCLOS(s, ReadItem(ref_table, stream));
 	    SET_FRAME(s, ReadItem(ref_table, stream));
 	    SET_HASHTAB(s, ReadItem(ref_table, stream));
 	    SET_ATTRIB(s, ReadItem(ref_table, stream));
+	    R_ReadItemDepth--;
 	    if (ATTRIB(s) != R_NilValue &&
 		getAttrib(s, R_ClassSymbol) != R_NilValue)
 		/* We don't write out the object bit for environments,
@@ -1561,9 +1570,15 @@ static SEXP ReadItem (SEXP ref_table, R_inpstream_t stream)
 	PROTECT(s = allocSExp(type));
 	SETLEVELS(s, levs);
 	SET_OBJECT(s, objf);
+	R_ReadItemDepth++;
 	SET_ATTRIB(s, hasattr ? ReadItem(ref_table, stream) : R_NilValue);
 	SET_TAG(s, hastag ? ReadItem(ref_table, stream) : R_NilValue);
+	if (hastag && R_ReadItemDepth <= 0) {
+	    Rprintf("%*s", 2*(R_ReadItemDepth - R_InitReadItemDepth), "");
+	    PrintValue(TAG(s));
+	}
 	SETCAR(s, ReadItem(ref_table, stream));
+	R_ReadItemDepth--; /* do this early because of the recursion. */
 	SETCDR(s, ReadItem(ref_table, stream));
 	/* For reading closures and promises stored in earlier versions, convert NULL env to baseenv() */
 	if      (type == CLOSXP && CLOENV(s) == R_NilValue) SET_CLOENV(s, R_BaseEnv);
@@ -1579,8 +1594,10 @@ static SEXP ReadItem (SEXP ref_table, R_inpstream_t stream)
 	    PROTECT(s = allocSExp(type));
 	    AddReadRef(ref_table, s);
 	    R_SetExternalPtrAddr(s, NULL);
+	    R_ReadItemDepth++;
 	    R_SetExternalPtrProtected(s, ReadItem(ref_table, stream));
 	    R_SetExternalPtrTag(s, ReadItem(ref_table, stream));
+	    R_ReadItemDepth--;
 	    break;
 	case WEAKREFSXP:
 	    PROTECT(s = R_MakeWeakRef(R_NilValue, R_NilValue, R_NilValue,
@@ -1647,15 +1664,22 @@ static SEXP ReadItem (SEXP ref_table, R_inpstream_t stream)
 	case STRSXP:
 	    len = ReadLENGTH(stream);
 	    PROTECT(s = allocVector(type, len));
+	    R_ReadItemDepth++;
 	    for (count = 0; count < len; ++count)
 		SET_STRING_ELT(s, count, ReadItem(ref_table, stream));
+	    R_ReadItemDepth--;
 	    break;
 	case VECSXP:
 	case EXPRSXP:
 	    len = ReadLENGTH(stream);
 	    PROTECT(s = allocVector(type, len));
-	    for (count = 0; count < len; ++count)
+	    R_ReadItemDepth++;
+	    for (count = 0; count < len; ++count) {
+		if (R_ReadItemDepth <= 0) 
+		    Rprintf("%*s[%d]\n", 2*(R_ReadItemDepth - R_InitReadItemDepth), "", count+1);
 		SET_VECTOR_ELT(s, count, ReadItem(ref_table, stream));
+	    }
+	    R_ReadItemDepth--;
 	    break;
 	case BCODESXP:
 	    PROTECT(s = ReadBC(ref_table, stream));
@@ -1691,10 +1715,15 @@ static SEXP ReadItem (SEXP ref_table, R_inpstream_t stream)
 	       alone.  If there is an attribute (as there might be if
 	       the serialized data was created by an older version) we
 	       read and ignore the value. */
+	    R_ReadItemDepth++;
 	    if (hasattr) ReadItem(ref_table, stream);
+	    R_ReadItemDepth--;
 	}
-	else
+	else {
+	    R_ReadItemDepth++;
 	    SET_ATTRIB(s, hasattr ? ReadItem(ref_table, stream) : R_NilValue);
+	    R_ReadItemDepth--;
+	}
 	UNPROTECT(1); /* s */
 	return s;
     }
@@ -1728,9 +1757,11 @@ static SEXP ReadBCLang(int type, SEXP ref_table, SEXP reps,
 	    PROTECT(ans = allocSExp(type));
 	    if (pos >= 0)
 		SET_VECTOR_ELT(reps, pos, ans);
+            R_ReadItemDepth++;
 	    if (hasattr)
 		SET_ATTRIB(ans, ReadItem(ref_table, stream));
 	    SET_TAG(ans, ReadItem(ref_table, stream));
+	    R_ReadItemDepth--;
 	    SETCAR(ans, ReadBCLang(InInteger(stream), ref_table, reps,
 				   stream));
 	    SETCDR(ans, ReadBCLang(InInteger(stream), ref_table, reps,
@@ -1738,7 +1769,13 @@ static SEXP ReadBCLang(int type, SEXP ref_table, SEXP reps,
 	    UNPROTECT(1);
 	    return ans;
 	}
-    default: return ReadItem(ref_table, stream);
+    default: 
+    	{
+    	    R_ReadItemDepth++;
+            SEXP res = ReadItem(ref_table, stream);
+            R_ReadItemDepth--;
+            return res;
+        }
     }
 }
 
@@ -1765,7 +1802,9 @@ static SEXP ReadBCConsts(SEXP ref_table, SEXP reps, R_inpstream_t stream)
 	    SET_VECTOR_ELT(ans, i, c);
 	    break;
 	default:
+	    R_ReadItemDepth++;
 	    SET_VECTOR_ELT(ans, i, ReadItem(ref_table, stream));
+	    R_ReadItemDepth--;
 	}
     }
     UNPROTECT(1);
@@ -1776,7 +1815,9 @@ static SEXP ReadBC1(SEXP ref_table, SEXP reps, R_inpstream_t stream)
 {
     SEXP s;
     PROTECT(s = allocSExp(BCODESXP));
+    R_ReadItemDepth++;
     SETCAR(s, ReadItem(ref_table, stream)); /* code */
+    R_ReadItemDepth--;
     SETCAR(s, R_bcEncode(CAR(s)));
     SETCDR(s, ReadBCConsts(ref_table, reps, stream)); /* consts */
     SET_TAG(s, R_NilValue); /* expr */
